--- a/.gitignore
+++ b/.gitignore
@@ -19,12 +19,12 @@ tmp/
 *.swp
 *~.nib
 local.properties
-.settings/
+*.settings/
 .loadpath
 *.recommenders*
 
 # Eclipse Core
-.project
+*.project
 
 # External tool builders
 .externalToolBuilders/
