--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 *.war
 *.ear
 
+#Allows lib stuff
+!*/libs/*.jar
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
